@@ -1,2 +1,33 @@
 # Tucil3_13520152
- Boom Boom Bakudan 15 Puzzle Solver is a program that solve 15 Puzzle with Branch and Bound Algorithm
+## Deskripsi Singkat
+ Boom Boom Bakudan 15-Puzzle Solver adalah sebuah program yang menyelesaikan permainan 15-Puzzle dengan Algoritma Branch and Bound. 15-Puzzle sendiri ialah sebuah permainan yang terdiri dari 15 kotak yang berisi angka dari 1 sampai 15 yang berada pada kotak 4x4. Permainan ini bertujuan untuk menyusun kotak-kotak tersebut agar tersusun berurutan seperti gambar pada di bawah ini.
+ 
+ <div align="center">
+ 
+ ![image](https://user-images.githubusercontent.com/66018985/161569518-cb409e53-66a9-4800-b720-b354d975daa5.png)  
+ **Gambar 1.** Halaman depan program
+ 
+ </div>
+ 
+## Requirement
+1. Windows 10 atau lebih versi yang lebih tinggi
+2. Java 17 atau versi yang lebih tinggi
+
+## Cara Compile dan Menjalankan Program  
+1. Buka direktori repository
+2. Jalankan _command_ berikut.
+ ```
+ java -jar --enable-preview bin/Tucil_13520152.jar
+ ```
+3. Pilih _file_ yang berisi masukan. _File_ masukan berisi 4x4 angka `A[1..16]`
+  ```
+  A1 A2 A3 A4
+  A5 A6 A7 A8
+  A9 A10 A11 A12
+  A13 A14 A15 A16
+  ```
+4. Klik Start!
+5. Solusi akan dianimasikan jika _puzzle_ dapat diselesaikan. Hasil akan dicetak ke kotak teks di bagian bawah.
+
+## Author
+Program ini dibuat oleh Muhammad Fahmi Irfan (13520152)
